--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "axios": "^1.6.8",
-    "discord.js": "^13.17.1"
+    "discord.js": "^13.17.1",
+    "grunt": "^1.6.1",
+    "grunt-cli": "^1.4.3"
   },
   "name": "cat",
   "version": "1.0.0",
